wk_taa_taaqa/src/objects/ZipCodeDTN__c.object
<CustomObject>
    <fields>
        <fullName>AISR__c</fullName>
        <inlineHelpText>AISR</inlineHelpText>
        <label>AISR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Indirect_Corp_Software__c</fullName>
        <description>ASR Indirect (Corp Software)</description>
        <inlineHelpText>ASR Indirect (Corp Software)</inlineHelpText>
        <label>ASR Indirect (Corp Software)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>City for zip code</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Direct__c</fullName>
        <inlineHelpText>FSR - Direct (Corp Software)</inlineHelpText>
        <label>Corp Direct</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Indirect__c</fullName>
        <inlineHelpText>FSR - Indirect (Corp Sotware)</inlineHelpText>
        <label>Corp Indirect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISC_N2E_Professional_Software__c</fullName>
        <label>ISC - N2E Professional Software</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISC_N2N_Professional_Software__c</fullName>
        <label>ISC - N2N Professional Software</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Indirect__c</fullName>
        <inlineHelpText>ISR - Indirect (Corp Software)</inlineHelpText>
        <label>ISR Indirect</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this record is updated.</inlineHelpText>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAM_SAM_CNAM__c</fullName>
        <inlineHelpText>CNAM-Corporate Account Manager, SAM-Strategic Account Manager, CNAM-Corporate Account Manager</inlineHelpText>
        <label>NAM/SAM/CNAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_SW_FSR__c</fullName>
        <inlineHelpText>FSR- Professional Sotware</inlineHelpText>
        <label>Pro SW FSR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_SW_ISR__c</fullName>
        <inlineHelpText>ISR - Professional Software</inlineHelpText>
        <label>Pro SW ISR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QP__c</fullName>
        <inlineHelpText>QP Rep</inlineHelpText>
        <label>QP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_ASR__c</fullName>
        <inlineHelpText>ASR - Research and Learning</inlineHelpText>
        <label>R&amp;L ASR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_FSR__c</fullName>
        <inlineHelpText>FSR - Research and Learning</inlineHelpText>
        <label>R&amp;L FSR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_ISR__c</fullName>
        <label>R&amp;L ISR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STG_Vertical__c</fullName>
        <label>STG_Vertical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_ASR__c</fullName>
        <inlineHelpText>ASR - Professional Software</inlineHelpText>
        <label>SW ASR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source__c</fullName>
        <inlineHelpText>ASR - R&amp;L - Service Source</inlineHelpText>
        <label>Service Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State for zip code</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC__c</fullName>
        <label>TC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Consulting_Rep_Research__c</fullName>
        <label>Training &amp; Consulting Rep - Research</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Zip Code DTN</label>
    <nameField>
        <label>Zip Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes DTN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>